# KR4

./: README.md  pyproject.toml
data/: config.py  vacancies.json
src/: API_classes.py  main.py  preparatoin.py  utils.py  work_json.py  work_vacancies.py
