[tool.poetry]
name = "KR4"
version = "0.1.0"
description = ""
authors = ["Oleg Nanovskiy <oociso@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.1"

[tool.poetry.group.dev.dependencies]
yes = "^0.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"